Fixed landing page layout issues

--- a/app/assets/stylesheets/frameworks.scss
+++ b/app/assets/stylesheets/frameworks.scss
@@ -195,3 +195,7 @@ h4.group-header {
   z-index: 100;
   width: 80%;
 }
+
+.margin-bottom{
+  margin-bottom: 1em;
+}
