--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -513,6 +513,7 @@ div#languages-container.hidden {
 
 .hero .landing {
   position: absolute;
+  margin-top: -2px;
   left:0;
   width: 100%;
   min-height: 700px;
